testdata/baselines/reference/submodule/conformance/useObjectValuesAndEntries3.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
useObjectValuesAndEntries3.ts(3,15): error TS2304: Cannot find name 'Object'.
useObjectValuesAndEntries3.ts(7,15): error TS2304: Cannot find name 'Object'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== useObjectValuesAndEntries3.ts (2 errors) ====
    var o = { a: 1, b: 2 };
    
    for (var x of Object.values(o)) {
                  ~~~~~~
!!! error TS2304: Cannot find name 'Object'.
        let y = x;
    }
    
    var entries = Object.entries(o);
                  ~~~~~~
!!! error TS2304: Cannot find name 'Object'.